<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DiaryTravel</string>
    <string name="bem_vindo">Seja Bem-vindo</string>
    <string name="crie_registo_viagens">Crie o seu registo de Viagens</string>
    <string name="aceda_menu_viagens">Aceda ao Menu na secção Viagens no botão adicionar</string>
    <string name="pular_tutorial">Pular o Tutorial</string>
    <string name="email">Email</string>
    <string name="email_ins">Insira Email</string>
    <string name="palavra_passe">Palavra-Passe</string>
    <string name="palavra_passe_confi">Confirme a palavra-passe</string>
    <string name="palavra_passe_ins"> Insira a palavra-passe</string>
    <string name="criar_uma_conta">Criar uma Conta</string>
    <string name="entrar">Entrar</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="nome_ins">Insira o nome completo</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="cancelar">Cancelar</string>
    <string name="viagens_favoritas">Viagens Favoritas</string>
    <string name="estatistica">Estatística</string>
    <string name="perfil">Perfil</string>
    <string name="editar_perfil">Editar o Perfil</string>
    <string name="remover_conta">Remover Conta</string>
    <string name="sair">Sair</string>
    <string name="idade">Idade</string>
    \<string name="descricao">Descrição</string>
    <string name="sobre_mim">Sobre mim</string>
    <string name="guardar">Guardar</string>
    <string name="excluir_conta_pergunta">Deseja excluir a sua conta?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="adicionar_viagem">Adicionar Viagem</string>
    <string name="titulo">Título</string>
    <string name="data">Data</string>
    <string name="classificacao">Classificação</string>
    <string name="categoria">Categoria</string>
    <string name="localizacao">Localização</string>
    <string name="comentario">Comentário</string>
    <string name="carregar_imagem">Carregar Imagem</string>
    <string name="adicionar_pontos">Adicionar Pontos</string>
    <string name="adicionar">Adicionar</string>
    <string name="editar_viagem">Editar Viagem</string>
    <string name="remover_viagem_pergunta">Deseja remover esta Viagem?</string>
    <string name="regiao">Região</string>
    <string name="voltar">Voltar</string>
    <string name="editar_pontos">Editar Pontos</string>
    <string name="pontos">Pontos</string>
    <string name="proximo">Próximo</string>
    <string name="pular">Avanças</string>
    <string name="conta_removida_sucesso">A sua conta foi removida com sucesso</string>
    <string name="descricao_padrao_utilizador">Utilizador DiaryTravel</string>
    <string name="roma_1_semana_3_locais">Roma - 1 semana - 3 locais</string>
    <string name="paris_5_dias_2_locais">Paris - 5 dias - 2 locais</string>
    <string name="viagens_12">Viagens: 12</string>
    <string name="continente_mais_visitado_europa">Continente mais visitado: Europa</string>
    <string name="lugar_favorito_italia">Lugar favorito: Itália</string>
</resources>