<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#B3E2D3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarViagens">

    <!-- TOOLBAR -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="#2D8C99"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/extrabold"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />





        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>



    <!-- CONTEÚDO PRINCIPAL -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMostrar"
                android:layout_width="311dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:text="@string/adicionar_viagem"
                android:textColor="@android:color/white"
                android:fontFamily="@font/regular"
                app:backgroundTint="#1D4E89"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTextTitulo"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:hint="@string/titulo"
                android:backgroundTint="#FFFFFF"
                android:background="#FFFFFF"
                android:fontFamily="@font/regular"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/btnMostrar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTextData"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:hint="@string/data"
                android:backgroundTint="#FFFFFF"
                android:background="#FFFFFF"
                android:fontFamily="@font/regular"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/editTextTitulo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTextClassificacao"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:hint="@string/classificacao"
                android:backgroundTint="#FFFFFF"
                android:background="#FFFFFF"
                android:fontFamily="@font/regular"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/editTextData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTextCategoria"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:hint="@string/categoria"
                android:backgroundTint="#FFFFFF"
                android:background="#FFFFFF"
                android:fontFamily="@font/regular"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/editTextClassificacao"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTextLocalizacao"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:hint="@string/localizacao"
                android:backgroundTint="#FFFFFF"
                android:background="#FFFFFF"
                android:fontFamily="@font/regular"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/editTextCategoria"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTextComentario"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:hint="@string/comentario"
                android:backgroundTint="#FFFFFF"
                android:background="#FFFFFF"
                android:fontFamily="@font/regular"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/editTextLocalizacao"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageViewFoto"
                android:layout_width="290dp"
                android:layout_height="146dp"
                android:layout_marginTop="32dp"
                android:contentDescription="Imagem da viagem"
                android:background="#CCCCCC"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/paisagem"
                app:layout_constraintTop_toBottomOf="@+id/editTextComentario"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSelecionarFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Selecionar Foto"
                app:layout_constraintTop_toBottomOf="@id/imageViewFoto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdicionar"
                android:layout_width="316dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/regular"
                android:text="@string/adicionar"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/button1"
                app:layout_constraintTop_toBottomOf="@id/btnSelecionarFoto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelar"
                android:layout_width="316dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/regular"
                android:text="@string/cancelar"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/button1"
                app:layout_constraintTop_toBottomOf="@id/btnAdicionar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
