<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#B3E2D3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarViagens">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="#2D8C99"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/extrabold"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarMain"
        app:layout_constraintEnd_toEndOf="@+id/toolbarMain"
        app:layout_constraintStart_toStartOf="@+id/toolbarMain"
        app:layout_constraintTop_toTopOf="@+id/toolbarMain" />





    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMostrar"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/button1"
                android:fontFamily="@font/regular"
                android:text="@string/editar_viagem"
                android:textColor="@android:color/white"
                android:minHeight="48dp"
                app:backgroundTint="#1D4E89"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTitulo"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/titulo"
                android:inputType="text"
                android:text=""
                android:minHeight="48dp"
                android:importantForAutofill="yes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnMostrar" />


            <EditText
                android:id="@+id/editTextData"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/data"
                android:text=""
                android:inputType="text"
                android:minHeight="48dp"
                android:importantForAutofill="yes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTitulo" />

            <EditText
                android:id="@+id/editTextClassificacao"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/classificacao"
                android:text=""
                android:inputType="text"
                android:minHeight="48dp"
                android:importantForAutofill="yes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextData" />

            <EditText
                android:id="@+id/editTextCategoria"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/categoria"
                android:text=""
                android:inputType="text"
                android:minHeight="48dp"
                android:importantForAutofill="yes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextClassificacao" />

            <EditText
                android:id="@+id/editTextLocalizacao"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/localizacao"
                android:text=""
                android:inputType="text"
                android:minHeight="48dp"
                android:importantForAutofill="yes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCategoria" />

            <EditText
                android:id="@+id/editTextComentario"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/comentario"
                android:text=""
                android:inputType="text"
                android:minHeight="48dp"
                android:importantForAutofill="yes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextLocalizacao" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="290dp"
                android:layout_height="146dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextComentario"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdicionar"
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/button1"
                android:fontFamily="@font/regular"
                android:text="@string/adicionar"
                android:textColor="@android:color/white"
                android:minHeight="48dp"
                app:backgroundTint="#1D4E89"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelar"
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/button1"
                android:fontFamily="@font/regular"
                android:text="@string/cancelar"
                android:textColor="@android:color/white"
                android:minHeight="48dp"
                app:backgroundTint="#8E5429"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAdicionar"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>